1.6.6
  * Remove references to FATAL errors, which logback (nee jlogger) doesn't support
  
1.6.5
  * Change to use jlogger
  
1.6.4  
  * Update gem requirements
  
1.6.3
  * Fixed bad calls to logback::simple "log" object in class methods, where it wasn't available
  
1.6.2
  * When declaring a function using the DSL, make sure it is defined in the given module
1.6.1
  * Change VariableField#asDSLString to reflect compact declaration of spec with subs
1.6.0
  * Allow specs like spec('245ac'), with or without a block as well.
  
1.5.3
  * Changed to use Logback::Simple
  
1.5.2
  * Added more docs
  * Put in actual @deprecated strings in YARD docs
  
1.5.1
  * Fixed lots of DSL bugs
  * Moved testing to RSpec in anticipation of using Hudson

1.5.0 
  * Added DSL; making it the preferred way to operate. Totally deprecating the aray-of-hashes stuff. 

1.1.1
  * Fixed bug with :noMapKeyDefault => :passthrough for MVMap

1.1.0
  * Added support for Proc objects as the value in a MVMap

1.0.0
  * Added constant specs (:constantValue=>'val' or :constantValue=>['array', 'of', 'values'])
  * Arbitrarily decided this is version 1.0

0.9.0
  * Added ability to benchmark by calling ss.doc_from_marc(r, true) instead of just ss.doc_from_marc(r)

0.8.1
  * Added some specs, squashed some bugs. In particular, make sure the Range passed to a ControlField
    makes sense (x..y, where x<=y and x > 0)

0.8.0
  * Changed the syntax for a variable field from ['245', '*', '*', 'ab'] to just ['245', 'ab']. We'll worry
    about indicators when that bridge gets crossed.

0.7.3
  * Squashed a bug where I forgot to deal with escaping in java .properties files. Now I'm just using 
    a real Java Properties object so I don't have to worry about it.

0.7.2
  * Also change methodArgs to functionArgs

0.7.1
  * Forgot to update this CHANGES file.     

0.7.0
  * Change configuration for custom functions to use :functionSymbol instead of :methodSymbol. Because, you know, they're